--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -42,6 +42,21 @@ h1 {
   z-index: 10;
   transition: all .5s linear;
 }
+h2{
+  font-family: 'BeVietnamPro-Bold';
+  font-size: 2.5rem;
+  color: #222;
+  text-align: center;
+  padding: 1 rem 0.5rem;
+}
+h3{
+  font-family: 'BeVietnamPro-Light';
+  font-size: 2rem;
+  color: #222;
+  text-align: center;
+  padding: 0 20% 1.5rem 20%;
+  margin-bottom: 0.5rem;
+}
 
 header img{
   width: 100%;
@@ -107,26 +122,6 @@ padding-right: 4px;
 padding-top:2px;   
 }
 
-.content {
-  width: 80%;
-}
-
-h2{
-  font-family: 'BeVietnamPro-Bold';
-  font-size: 2.5rem;
-  color: #222;
-  text-align: center;
-  padding: 1 rem 0.5rem;
-}
-h3{
-  font-family: 'BeVietnamPro-Light';
-  font-size: 2rem;
-  color: #222;
-  text-align: center;
-  padding: 0 20% 1.5rem 20%;
-  margin-bottom: 0.5rem;
-}
-
 section {
   background: #efefef ;
   width: 85%;
@@ -157,12 +152,6 @@ padding: 1rem;
 .angebot img:hover {
     box-shadow: 0 0 6px #999;
     background: #fff;
-    }
-
-  
-.big{
-height: 1000px;
-
 }
 
 
@@ -172,9 +161,9 @@ footer{
   opacity: 0.9;
   width: 100%;
   border-top: 2px solid #666;
+  margin-top: 2rem;
 }
 footer div{
 font-size: 6rem;
 color: aqua;
-
 }
