--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,7 +38,7 @@ h1 {
   top:0px;
   position:fixed;
   width: 100%;
-  padding: 0.5rem 0 0.5rem 2rem;
+  padding: 1rem 0 0.5rem 2rem;
   z-index: 10;
   transition: all .5s linear;
 }
@@ -128,7 +128,7 @@ section {
   margin: 2rem auto;
   border: 2px solid #666;
   border-radius: 12px;
-  padding: 2rem 0 2rem 0;
+  padding: 3% 0 2rem 0;
 }
 
 .angebot-reihe{
@@ -145,13 +145,13 @@ section {
 
 
 .angebot img{
-width: 30%;
+width: 340px;
 padding: 1rem;
 }
 
 .angebot img:hover {
     box-shadow: 0 0 6px #999;
-    background: #fff;
+    background: #eee;
 }
 
 
@@ -161,9 +161,25 @@ footer{
   opacity: 0.9;
   width: 100%;
   border-top: 2px solid #666;
-  margin-top: 2rem;
+  margin-top: 5%;
 }
 footer div{
-font-size: 6rem;
-color: aqua;
+font-size: 2rem;
+color: #000;
+display: block;
+text-align: center;
+}
+
+
+.ft-links {
+  background: #f0f;
+  width: 49%;
+  text-align: right;
+  display: inline;
+}
+.ft-rechts {
+  background: #00f;
+  width: 49%;
+  text-align: left;
+  display: inline;
 }
