--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,6 +25,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  text-decoration: none;
 }
 body{
   background: url(../img/bg_wallpaper.jpg) ;
@@ -42,17 +43,24 @@ h1 {
   z-index: 10;
   transition: all .5s linear;
 }
+h1 a{
+  color: #fff;
+}
+
 h2{
   font-family: 'BeVietnamPro-Bold';
   font-size: 2.5rem;
   color: #222;
   text-align: center;
-  padding: 1 rem 0.5rem;
+  padding: 1rem 0.5rem;
+}
+h2:nth-of-type(2){
+  padding-top: 3.5rem;
 }
 h3{
   font-family: 'BeVietnamPro-Light';
   font-size: 2rem;
-  color: #222;
+  color: #333;
   text-align: center;
   padding: 0 20% 1.5rem 20%;
   margin-bottom: 0.5rem;
@@ -143,10 +151,9 @@ section {
   margin: 0 auto;
 }
 
-
 .angebot img{
-width: 340px;
-padding: 1rem;
+  width: 340px;
+  padding: 1rem;
 }
 
 .angebot img:hover {
