--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -55,7 +55,7 @@ h2{
   padding: 1rem 0.5rem;
 }
 h2:nth-of-type(2){
-  padding-top: 3.5rem;
+  padding-top: 5%;
 }
 h3{
   font-family: 'BeVietnamPro-Light';
