--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,7 +26,11 @@
   padding: 0;
   box-sizing: border-box;
   text-decoration: none;
+  color: #222;
 }
+
+
+
 body{
   background: url(../img/bg_wallpaper.jpg) ;
 }
@@ -34,7 +38,7 @@ body{
 h1 {
   font-family: 'pmarker', serif;
   line-height: 65%;
-  color: #fff;
+  color: #efefef;
   text-shadow: 0 0 8px #000;
   top:0px;
   position:fixed;
@@ -55,7 +59,7 @@ h2{
   padding: 1rem 0.5rem;
 }
 h2:nth-of-type(2){
-  padding-top: 5%;
+  padding-top: 6%;
 }
 h3{
   font-family: 'BeVietnamPro-Light';
@@ -72,7 +76,7 @@ header img{
 }
 
 NAV {
-  background-color: #000;
+  background-color: #010101;
   width: 100%;
   height: 80px;
   border-bottom: 1px solid #fff; 
@@ -80,7 +84,7 @@ NAV {
   position: sticky;
   top: 0px;
   display: block;
-  color: #fff;
+  color: #efefef;
   font-family: 'SplineSans-Medium';
   font-size: 1rem;
 }
@@ -99,10 +103,9 @@ NAV UL {
 }
 
 NAV LI A { 
-    color: #fff; 
+    color: #efefef; 
     text-decoration: none;
     margin: 0;
-    
 }
 
 NAV LI A::before{
@@ -130,16 +133,34 @@ padding-right: 4px;
 padding-top:2px;   
 }
 
+.sprunganker {
+  visibility: hidden;
+  height: 0px;
+  position: absolute;
+  margin: -120px;}
+
 section {
   background: #efefef ;
   width: 85%;
-  margin: 2rem auto;
+  margin: 10% auto;
   border: 2px solid #666;
   border-radius: 12px;
   padding: 3% 0 2rem 0;
 }
 
-.angebot-reihe{
+section p {
+  font-family: 'BeVietnamPro-Light';
+  font-size: 1em;
+  color: #222;
+  padding: 1rem 1rem;
+}
+
+section p a:hover{
+  text-decoration: underline;
+}
+
+
+.brandneu, .empfehlungen, .empfehlungenklein{
   display: block;
   text-align: center;
   margin: 0 auto;
@@ -152,41 +173,71 @@ section {
 }
 
 .angebot img{
-  width: 340px;
+  /* width: 340px; */
+  width: 30%;
   padding: 1rem;
 }
+
+.empfehlungenklein .angebot img{
+  /* width: 340px; */
+  width: 10%;
+  padding: 1rem;
+}
+
 
 .angebot img:hover {
   box-shadow: 0 0 6px #999;
   background: #eee;
 }
 
+section h3:nth-of-type(2){
+  padding-top: 8%;
+}
 
+/* Footer */
 
 footer{
-  background: #fff ;
-  opacity: 0.9;
+  background: #efefef ;
   width: 100%;
   border-top: 2px solid #666;
-  margin-top: 5%;
+  border: 2px solid #f00;
+  border-radius: 10px 10px 0 0;
+  margin-top: 10%;
+  margin-bottom: 3%;
+  padding: 2% 0 1% 0;
+  font-family: 'SplineSans-Medium';
+  font-size: 0.8rem;
 }
-footer div{
-  font-size: 2rem;
-  color: #000;
-  display: block;
+
+.footer{
+  font-size: 1rem;
+  color: #222;
+  background: #efefef ;
   text-align: center;
 }
 
+.footeraddress, .footeropen, .footermenu{
+  background: #efefef ;
+  float: right;
+  padding: 0 3rem 1rem 3rem;
+}
 
-.ft-links {
-  background: #f0f;
-  width: 49%;
-  text-align: right;
-  display: inline;
+
+footer H4{
+  font-size: 1rem;
+  color: #222;
 }
-.ft-rechts {
-  background: #00f;
-  width: 49%;
+
+footer ul{
   text-align: left;
-  display: inline;
+  list-style: none;
 }
+footer a{
+  text-decoration: none;
+  color: #222;
+}
+
+footer a:hover{
+  text-decoration: underline;
+}
+
