--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -37,12 +37,13 @@ body{
 
 h1 {
   font-family: 'pmarker', serif;
+  
   line-height: 65%;
   color: #efefef;
   text-shadow: 0 0 8px #000;
   top:0px;
   position:fixed;
-  width: 30%;
+ 
   padding: 1rem 0 1.5rem 2rem;
   z-index: 10;
   transition: all .5s linear;
@@ -200,7 +201,6 @@ footer{
   background: #efefef ;
   width: 100%;
   border-top: 2px solid #666;
-  border: 2px solid #f00;
   border-radius: 10px 10px 0 0;
   margin-top: 10%;
   margin-bottom: 3%;
@@ -218,7 +218,8 @@ footer{
 
 .footeraddress, .footeropen, .footermenu{
   background: #efefef ;
-  float: right;
+  display: inline-block;
+  vertical-align: top;
   padding: 0 3rem 1rem 3rem;
 }
 
@@ -232,11 +233,11 @@ footer ul{
   text-align: left;
   list-style: none;
 }
+
 footer a{
   text-decoration: none;
   color: #222;
 }
-
 footer a:hover{
   text-decoration: underline;
 }
