--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -203,8 +203,7 @@ footer{
   border-top: 2px solid #666;
   border-radius: 10px 10px 0 0;
   margin-top: 10%;
-  margin-bottom: 3%;
-  padding: 2% 0 1% 0;
+  padding: 2% 0 1rem 0;
   font-family: 'SplineSans-Medium';
   font-size: 0.8rem;
 }
@@ -222,7 +221,11 @@ footer{
   vertical-align: top;
   padding: 0 3rem 1rem 3rem;
 }
-
+.footeropen {
+  text-align: center;
+  border-left: 1px solid #ccc;
+  border-right: 1px solid #ccc;
+}
 
 footer H4{
   font-size: 1rem;
