--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -206,6 +206,7 @@ footer{
   padding: 2% 0 1rem 0;
   font-family: 'SplineSans-Medium';
   font-size: 0.8rem;
+  text-align: center;
 }
 
 .footer{
