--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,7 +3,6 @@
   font-family: "Pmarker";
   src: url(../fonts/PermanentMarker-Regular.ttf);
 }
-
 @font-face {
   font-family: 'play';
   src: url(../fonts/LL_RECOR.TTF);
@@ -29,21 +28,17 @@
   color: #222;
 }
 
-
-
 body{
   background: url(../img/bg_wallpaper.jpg) ;
 }
 
 h1 {
   font-family: 'pmarker', serif;
-  
   line-height: 65%;
   color: #efefef;
   text-shadow: 0 0 8px #000;
   top:0px;
   position:fixed;
- 
   padding: 1rem 0 1.5rem 2rem;
   z-index: 10;
   transition: all .5s linear;
@@ -69,6 +64,13 @@ h3{
   text-align: center;
   padding: 0 20% 1.5rem 20%;
   margin-bottom: 0.5rem;
+}
+h5{
+  font-family: 'BeVietnamPro-Light';
+  font-size: 1.2rem;
+  color: #333;
+  text-align: left;
+  padding: 1rem 1rem 0 1rem;
 }
 
 header img{
@@ -159,8 +161,27 @@ section p {
 section p a:hover{
   text-decoration: underline;
 }
+article.home P{
+  width:80%;
+  color: #333;
+  text-align:justify;
+  line-height: 1.5rem;
+  margin: 0 auto;
+}
+article.home H5 {
+  color: #333;
+  text-align: center;
+  padding-bottom: 1rem;
+} 
+article.home div ul li {
+  color: #666;
+  list-style: none;
+  font-family: 'BeVietnamPro-Bold';
+  text-align: center;
+  padding-bottom: 1.1rem;
+} 
 
-
+/*  BRANDNEU und EMPFEHLUNGEN  */
 .brandneu, .empfehlungen, .empfehlungenklein{
   display: block;
   text-align: center;
@@ -246,3 +267,26 @@ footer a:hover{
   text-decoration: underline;
 }
 
+A .fa-facebook-square {
+  font-size: 2rem;
+  color: #666;
+  padding: 0 3px 4px 3px;
+  margin-bottom: 10px;
+}
+A .fa-instagram-square {
+  font-size: 2rem;
+  color: #666;
+  padding: 0 3px 4px 3px;
+  margin-bottom: 10px;
+}
+
+A .fa-facebook-square:hover {
+  font-size: 2rem;
+  color: #1877F2;
+  
+}
+A .fa-instagram-square:hover {
+  font-size: 2rem;
+  color: #E4405F;
+  
+}
