--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,17 +31,20 @@
 body{
   background: url(../img/bg_wallpaper.jpg) ;
 }
-
+#header {
+  z-index: 1000;
+}
 h1 {
   font-family: 'pmarker', serif;
   line-height: 65%;
   color: #efefef;
   text-shadow: 0 0 8px #000;
   top:0px;
-  position:fixed;
+  position: fixed;
   padding: 1rem 0 1.5rem 2rem;
   z-index: 10;
   transition: all .5s linear;
+  z-index: 1001;
 }
 h1 a{
   color: #fff;
@@ -90,6 +93,7 @@ NAV {
   color: #efefef;
   font-family: 'SplineSans-Medium';
   font-size: 1rem;
+  z-index: 1000;
 }
 
 NAV UL {
@@ -97,20 +101,16 @@ NAV UL {
   padding-top: 30px;
   width: 80%;
 }
-
- NAV LI {
+NAV LI {
   display: inline;
   list-style-type: none;
   padding-right: 20px;     
- 
 }
-
 NAV LI A { 
-    color: #efefef; 
-    text-decoration: none;
-    margin: 0;
+  color: #efefef; 
+  text-decoration: none;
+  margin: 0;
 }
-
 NAV LI A::before{
 font-family: "play";
 font-size: 1.5rem; 
@@ -119,7 +119,6 @@ opacity: 0;
 padding-right: 4px;
 padding-top:2px;         
 }
-
 NAV LI A:hover { 
   transition: all .5s linear;
   color: #fff;
@@ -140,7 +139,8 @@ padding-top:2px;
   visibility: hidden;
   height: 0px;
   position: absolute;
-  margin: -120px;}
+  margin: -120px;
+}
 
 section {
   background: #efefef ;
@@ -166,24 +166,30 @@ article.home P{
   color: #333;
   text-align:justify;
   line-height: 1.5rem;
+  padding: 0 0 0.8rem 0;
   margin: 0 auto;
 }
 article.home H5 {
-  color: #333;
-  text-align: center;
-  padding-bottom: 1rem;
+  width:80%;
+  color:darkolivegreen;
+  background: #dedede;
+  text-align:justify;
+  padding: 0.2rem 0.8rem;
+  margin: 1.5rem auto 0.5rem auto;
+  border-bottom: 1px solid #cdcdcd;
 } 
 article.home div ul li {
   color: #666;
   list-style: none;
   font-family: 'BeVietnamPro-Bold';
-  text-align: center;
-  padding-bottom: 1.1rem;
+  text-align: left;
+  padding-bottom: 1.0rem;
+  margin-left: 40%;
 } 
 
 /*  BRANDNEU und EMPFEHLUNGEN  */
-.brandneu, .empfehlungen, .empfehlungenklein{
-  display: block;
+ .empfehlungen, .empfehlungenklein{
+  display: flexbox;
   text-align: center;
   margin: 0 auto;
 }
@@ -193,13 +199,50 @@ article.home div ul li {
   text-align: center;
   margin: 0 auto;
 }
-
-.angebot img{
+.brandneu {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  width: 80%;
+  margin: 0 25% 0 10%;
+  gap: 4rem;
+}
+.wrapper img{
   /* width: 340px; */
-  width: 30%;
+  width: 340px;
   padding: 1rem;
+  z-index: 1;
+}
+/* NEU */
+.wrapper {
+  width: fit-content;
+  margin: 0 auto;
+  position: relative;
+  overflow: hidden;
+  z-index: 1;
 }
 
+.wrapper-content {
+  width: 340px;
+  height: 340px;
+  font-family: "Pmarker";
+  font-size: 1rem;
+  text-shadow: 1px 1px 4px black;
+  background: rgba(0, 0, 0, 0.25);
+  color: #fff;
+  display: grid;
+  place-items: center;
+  position: absolute;
+  top: 100%;
+  transition: all 0.5s;
+  z-index: 1;
+}
+
+.wrapper:hover > .wrapper-content {
+  top: 0;
+  z-index: 1;
+}
+
+/* NEU */
 .empfehlungenklein .angebot img{
   /* width: 340px; */
   width: 10%;
